save changes to local file

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "mac": {
       "category": "your.app.category.type"
     }
+  },
+  "dependencies": {
+    "@electron/remote": "^1.0.2"
   }
 }
