--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "bs58": "^4.0.1",
     "directory-tree": "^2.2.5",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
     "uuid": "^8.3.2"
   }
