--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.17.1",
     "googleapis": "^67.0.0",
     "jquery": "^3.5.1",
+    "pino": "^6.11.0",
     "uuid": "^8.3.2"
   }
 }
