--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
     }
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bs58": "^4.0.1",
     "directory-tree": "^2.2.5",
     "electron-store": "^6.0.1",
     "express": "^4.17.1",
     "googleapis": "^67.0.0",
+    "got": "^11.8.1",
     "jquery": "^3.5.1",
+    "mime": "^2.5.0",
+    "node-youtube-resumable-upload": "^0.2.1",
     "pino": "^6.11.0",
     "uuid": "^8.3.2"
   }
